--- a/frontend/application/views/jobForm.html
+++ b/frontend/application/views/jobForm.html
@@ -4,7 +4,13 @@
 	</div>
 	<div class="job-form">
 		<form>
-		  <input class="job-input" placeholder="PHP"></input>
+
+            <div class="form-group">
+                <input id="jobKd" class="job-input" placeholder="PHP"></input>
+            </div>
+            <div class="form-group">
+                <input value="搜索一下" type="button"></input>
+            </div>
 		</form>
 	</div>
 	<div class="tab-content" ng-transclude></div>
