--- a/frontend/application/css/index.css
+++ b/frontend/application/css/index.css
@@ -15,10 +15,35 @@ body {
   display: inline; }
 
 .job-input {
-  width: 415px;
+  width: 50%;
+  min-width: 450px;
   height: 32px;
   padding-left: 10px;
   margin-top: 15px; }
+
+.autocomplete-suggestions {
+  border: 1px solid #999;
+  background: #FFF;
+  overflow: auto; }
+
+.autocomplete-suggestion {
+  padding: 2px 5px;
+  white-space: nowrap;
+  overflow: hidden; }
+
+.autocomplete-selected {
+  background: #F0F0F0; }
+
+.autocomplete-suggestions strong {
+  font-weight: normal;
+  color: #3399FF; }
+
+.autocomplete-group {
+  padding: 2px 5px; }
+
+.autocomplete-group strong {
+  display: block;
+  border-bottom: 1px solid #000; }
 
 .footer {
   bottom: 0;
@@ -34,5 +59,3 @@ body {
   min-width: 980px; }
   .fbar a {
     text-decoration: none; }
-
-/*# sourceMappingURL=index.css.map */
