--- a/frontend/application/css/index.css
+++ b/frontend/application/css/index.css
@@ -3,16 +3,26 @@
  */
 body {
   margin: 0;
-  padding: 30px 0 0 0;
+  padding: 60px 0 0 0;
   text-align: center;
   font-family: arial,sans-serif; }
 
 .search-control {
   padding-top: 115px; }
 
+.search-control-nav {
+  padding-top: 0; }
+
 .job-form {
   width: 413px;
   display: inline; }
+
+.job-form-nav {
+  position: absolute;
+  top: 0;
+  z-index: 9999;
+  left: 0;
+  width: 100%; }
 
 .job-input {
   width: 50%;
@@ -21,9 +31,12 @@ body {
   padding-left: 10px;
   margin-top: 15px; }
 
+.form-group-nav {
+  display: inline; }
+
 .autocomplete-suggestions {
   border: 1px solid #999;
-  background: #FFF;
+  background: #def;
   overflow: auto; }
 
 .autocomplete-suggestion {
