--- a/frontend/application/css/index.scss
+++ b/frontend/application/css/index.scss
@@ -9,12 +9,25 @@ body {
 
 // form
 .search-control {
-  padding-top: 115px;
+    padding-top: 115px;
+}
+
+.search-control-nav {
+    padding-top: 0;
 }
 
 .job-form {
   width: 413px;
   display: inline;
+}
+
+// job form when in navbar
+.job-form-nav {
+    position: absolute;
+    top: 0;
+    z-index: 9999;
+    left: 0;
+    width: 100%;
 }
 
 .job-input {
@@ -23,6 +36,11 @@ body {
   height: 32px;
   padding-left: 10px;
   margin-top: 15px;
+}
+
+// form group in navbar
+.form-group-nav {
+    display: inline;
 }
 
 // auto-complete
