add page result directive

--- a/frontend/application/css/index.scss
+++ b/frontend/application/css/index.scss
@@ -21,6 +21,12 @@ body {
   display: inline;
 }
 
+.job-card {
+  text-align: left;
+  padding: 8px;
+  margin-bottom: 5px;
+}
+
 // job form when in navbar
 .job-form-nav {
     position: absolute;
