--- a/frontend/application/css/index.css
+++ b/frontend/application/css/index.css
@@ -17,6 +17,11 @@ body {
   width: 413px;
   display: inline; }
 
+.job-card {
+  text-align: left;
+  padding: 8px;
+  margin-bottom: 5px; }
+
 .job-form-nav {
   position: absolute;
   top: 0;
@@ -72,3 +77,5 @@ body {
   min-width: 980px; }
   .fbar a {
     text-decoration: none; }
+
+/*# sourceMappingURL=index.css.map */
