--- a/frontend/application/views/jobForm.html
+++ b/frontend/application/views/jobForm.html
@@ -6,12 +6,11 @@
 		<form>
 
             <div class="form-group">
-                <input id="jobKd" class="job-input" placeholder="PHP"></input>
+                <input id="jobKd" ng-model="jobKd" class="job-input" placeholder="PHP"></input>
             </div>
             <div class="form-group">
                 <input value="搜索一下" type="button"></input>
             </div>
 		</form>
 	</div>
-	<div class="tab-content" ng-transclude></div>
 </div>
