--- a/frontend/application/views/jobForm.html
+++ b/frontend/application/views/jobForm.html
@@ -1,10 +1,9 @@
 <div class="search-control">
 	<div class="logo">
-		<img src="http://css88.b0.upaiyun.com/css88/2014/09/imooc.png" alt="用武">
+		<img src="static/logo1.png" alt="用武">
 	</div>
 	<div class="job-form">
 		<form>
-
             <div class="form-group">
                 <input id="jobKd" ng-model="jobKd" class="job-input" placeholder="PHP"></input>
             </div>
