--- a/frontend/application/views/jobForm.html
+++ b/frontend/application/views/jobForm.html
@@ -8,7 +8,7 @@
                 <input id="jobKd" ng-model="jobKd" class="job-input" placeholder="PHP"></input>
             </div>
             <div class="form-group">
-                <input value="搜索一下" type="button"></input>
+                <input class="job-button" value="搜索一下" type="button"></input>
             </div>
 		</form>
 	</div>
