--- a/frontend/application/css/index.css
+++ b/frontend/application/css/index.css
@@ -3,9 +3,10 @@
  */
 body {
   margin: 0;
-  padding: 60px 0 0 0;
+  padding: 60px 0 40px 0;
   text-align: center;
-  font-family: arial,sans-serif; }
+  font-family: arial,sans-serif;
+  background-color: #e9eaed; }
 
 .logo {
   height: 130px; }
@@ -19,27 +20,33 @@ body {
   padding-top: 0; }
 
 .job-form {
-  width: 413px;
-  display: inline; }
+  display: inline;
+  width: 600px;
+  height: 46px; }
 
 .job-card {
   text-align: left;
   padding: 8px;
-  margin-bottom: 5px; }
-
-.job-form-nav {
-  position: absolute;
-  top: 0;
-  z-index: 9999;
-  left: 0;
-  width: 100%; }
+  margin: 0 5px 5px 5px;
+  background-color: #fff; }
 
 .job-input {
   width: 50%;
   min-width: 450px;
   height: 32px;
   padding-left: 10px;
-  margin-top: 15px; }
+  margin-top: 15px;
+  border-radius: 4px;
+  border: 1px solid transparent; }
+
+.form-navbar {
+  float: left; }
+
+.job-button {
+  margin-top: 15px;
+  height: 32px;
+  border-radius: 4px;
+  border: 1px solid transparent; }
 
 .form-group-nav {
   display: inline; }
@@ -72,7 +79,7 @@ body {
   bottom: 0;
   font-size: 10pt;
   height: 35px;
-  position: absolute;
+  position: fixed;
   width: 100%; }
 
 .fbar {
@@ -82,5 +89,31 @@ body {
   min-width: 980px; }
   .fbar a {
     text-decoration: none; }
+
+.result-count {
+  padding: 0 0 4px 8px;
+  text-align: left;
+  color: #666; }
+
+.page-pos {
+  color: #666; }
+  .page-pos .curpage {
+    background: #f2f8ff;
+    border: 1px solid #e1e2e3;
+    width: 34px;
+    height: 34px;
+    cursor: pointer;
+    line-height: 34px; }
+  .page-pos .next, .page-pos .prev {
+    background: #f2f8ff;
+    border: 1px solid #e1e2e3;
+    padding: 0px 4px 0px 4px;
+    height: 34px;
+    cursor: pointer;
+    line-height: 34px; }
+  .page-pos .curpage:hover, .page-pos .next:hover, .page-pos .prev:hover {
+    border: 1px solid #38f; }
+  .page-pos span {
+    display: inline-block; }
 
 /*# sourceMappingURL=index.css.map */
