--- a/frontend/application/css/index.css
+++ b/frontend/application/css/index.css
@@ -6,7 +6,16 @@ body {
   padding: 60px 0 40px 0;
   text-align: center;
   font-family: arial,sans-serif;
-  background-color: #e9eaed; }
+  background-color: #f8f8f8; }
+
+.logo-nav {
+  display: none; }
+
+.navbar-default .logo-nav {
+  cursor: pointer;
+  float: left;
+  margin-top: 12px;
+  display: inline; }
 
 .logo {
   height: 130px; }
@@ -45,6 +54,7 @@ body {
 .job-button {
   margin-top: 15px;
   height: 32px;
+  color: #FFFFFF;
   border-radius: 4px;
   border: 1px solid transparent; }
 
@@ -115,5 +125,3 @@ body {
     border: 1px solid #38f; }
   .page-pos span {
     display: inline-block; }
-
-/*# sourceMappingURL=index.css.map */
