--- a/frontend/application/views/index.html
+++ b/frontend/application/views/index.html
@@ -1,7 +1,11 @@
-
-<job-searcher>
-	<job-form>
-	</job-form>
-</job-searcher>
+<header>
+  <nav class="navbar navbar-fixed-top">
+    <img src="static/logo_nav.png" class="logo-nav"></img>
+    <job-searcher>
+        <job-form>
+        </job-form>
+    </job-searcher>
+  </nav>
+</header>
 <page-result rows="searchResults">
 </page-result>
