--- a/frontend/application/css/index.scss
+++ b/frontend/application/css/index.scss
@@ -1,26 +1,50 @@
 @import 'variables';
+@import 'form';
+
+nav {
+  height: 34px;
+  background-color: #2d2d2d;
+
+  a {
+    color: #ccc;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+}
 
 body {
   margin: $body-margin;
-  padding: $body-padding;
+  //padding: $body-padding;
   text-align: center; // make logo center
   font-family: arial,sans-serif;
   //background-color: #e9eaed;
   background-color: #f8f8f8;
 }
 
-.logo-nav {
-  display: none;
+small {
+  font-size: 85%;
 }
 
-.navbar-default {
-  .logo-nav {
-    cursor: pointer;
-    float:left;
-    margin-top: 12px;
-    display: inline;
-  }
+.logo-nav-left {
+  cursor: pointer;
+  float: left;
+  margin-top: 3px;
+  display: inline;
+  height: 31px;
 }
+
+.login-button {
+  float: right;
+  line-height: 34px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0 5px 0 5px;
+  /* background-color: #000; */
+  //margin: 10px 10px 10px 10px;
+}
+
 
 .logo {
   height: $logo-height;
@@ -28,59 +52,6 @@ body {
   img {
     width: $logo-width;
   }
-}
-
-// form
-.search-control {
-    padding-top: 115px;
-}
-
-.search-control-nav {
-    padding-top: 0;
-}
-
-.job-form {
-  display: inline;
-  width: 600px;
-  height: 46px;
-}
-
-.job-card {
-  text-align: left;
-  padding: 8px;
-  margin: 0 5px 5px 5px;
-  background-color: #fff;
-}
-
-// job form when in navbar
-.job-form-nav {
-}
-
-.job-input {
-  width: 50%;
-  min-width: 450px;
-  height: 32px;
-  padding-left: 10px;
-  margin-top: 15px;
-  border-radius: 4px;
-  border: 1px solid transparent
-}
-
-.form-navbar {
-  float: left;
-}
-
-.job-button {
-  margin-top: 15px;
-  height: 32px;
-  color: #FFFFFF;
-  border-radius: 4px;
-  border: 1px solid transparent
-}
-
-// form group in navbar
-.form-group-nav {
-    display: inline;
 }
 
 // auto-complete
@@ -112,6 +83,10 @@ body {
 }
 
 // page result
+page-result {
+  width: 100%;
+}
+
 .result-count {
   padding: 0 0 4px 8px;
   text-align: left;
