--- a/frontend/application/views/jobForm.html
+++ b/frontend/application/views/jobForm.html
@@ -7,9 +7,9 @@
             <div class="form-group">
                 <input id="jobKd" ng-model="jobKd" class="job-input" placeholder="PHP"></input>
             </div>
-            <div class="form-group">
+<!--             <div class="form-group">
                 <input class="job-button" value="搜索一下" type="button"></input>
-            </div>
+            </div> -->
 		</form>
 	</div>
 </div>
